fix: resolve the issue with not showing loading ui for empty cell

--- a/front-end/src/components/WordsContainer/Table/TableCells/EditableCell.module.css
+++ b/front-end/src/components/WordsContainer/Table/TableCells/EditableCell.module.css
@@ -100,29 +100,6 @@
   }
 }
 
-.generating::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(
-    90deg,
-    transparent 25%,
-    rgba(88, 166, 255, 0.479) 50%,
-    transparent 75%
-  );
-  animation: shimmer 1s infinite;
-  z-index: 1;
-}
-
-@keyframes shimmer {
-  100% {
-    left: 200%;
-  }
-}
-
 .pulsingText {
   animation: pulse-opacity 1s ease-in-out infinite;
 }
